--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.27.5",
     "hint": "^7.1.10",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.1",
     "style-loader": "^3.3.3",
